# Factor-Regression

./: README.md  factors.ipynb  pyproject.toml
