[project]
name = "factor-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "getfamafrenchfactors>=0.0.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandas-datareader>=0.10.0",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.0",
]
